# atom-agentic-ai

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run-atom-ai-cli.sh  run-atom-ai-mcp.sh  run.sh
agent/: agent.py  agent_mcp.py  agent_mini.py  agent_mini_v2.py  agent_openai.py  gcs_audit_logger.py  local_tools.py  logging_config.py  mcp_helpers.py  model.py  repl.py  session_store.py  turn_log_to_html.py  turn_logger.py  usage_helpers.py
connectors/: __init__.py
connectors/slackbot/: README.md  __init__.py  __main__.py  agent_invoker.py  bot.py  config.py  slack_client.py
deploy/: recreate-vm-and-deploy-atom.sh  setup-gcloud.sh
docs/: command-proxy-broker-design.md  logging-v2.md  logging.md  mcp-design.md  proxy-design.md  repl-exception-handling.html  token-usage-design.md  turn-log-html.md  workflow-comparison.html
sandbox/: Dockerfile  Dockerfile.macos  Dockerfile.mcp  README.md  atom-command-proxy.py  gsutil-policy.json  gsutil-proxy-ctl.sh  gsutil-proxy.py  gsutil-wrapper-macos.sh  gsutil-wrapper.sh  mcp_server.py  report.html  run-hardened-macos.sh  run-hardened-mcp-macos.sh  run-hardened-with-network-macos.sh  run-hardened-with-network.sh  run-hardened.sh  run-mcp-macos.sh  sandbox.sh  seccomp-strict.json  test-mcp.py  test-security.sh
sandbox/atom-command-broker/: broker-ctl.sh  broker.py  default-policy.json  policy.py  protocol.py  registry.py
sandbox/atom-command-broker/adapters/: __init__.py  base.py  gcloud_adapter.py  gsutil_adapter.py  hadoop_adapter.py  kafka_adapter.py
